--- a/client/src/components/EditItem.css
+++ b/client/src/components/EditItem.css
@@ -15,7 +15,7 @@ div .header {
     text-align: center;
 }
 
-#modal-actions {
+#edit-modal-actions {
     display: flex;
     justify-content: center;
 }
