--- a/client/src/components/UserTable.css
+++ b/client/src/components/UserTable.css
@@ -1,6 +1,3 @@
 table.ui.table.lf_table {
     scroll-behavior: auto;
-    /* width: 90%;
-    margin: 20px; */
-    /* background-color: blue; */
 }
